--- a/src/web/TrabalhoRFB.html
+++ b/src/web/TrabalhoRFB.html
@@ -28,103 +28,7 @@
 
     <!-- Elementos da Tela -->
     <script type="module">        
-
-        //jsPanel: Janelas flutuantes
-        import { jsPanel } from './bibliotecas/jspanel/jspanel.min.js';        
-        import './bibliotecas/jspanel/extensions/hint/jspanel.hint.min.js';
-        import './bibliotecas/jspanel/extensions/modal/jspanel.modal.min.js';
-        import './bibliotecas/jspanel/extensions/contextmenu/jspanel.contextmenu.min.js';
-        import './bibliotecas/jspanel/extensions/tooltip/jspanel.tooltip.min.js';
-        import './bibliotecas/jspanel/extensions/layout/jspanel.layout.min.js';
-        import './bibliotecas/jspanel/extensions/dock/jspanel.dock.min.js';
-
-        //Módulos locais
-        import { ProcessosTrabalhoView } from "./modulos/processos_trabalho/processos_trabalho_view.js";
-        import { AtividadesView } from "./modulos/atividades/atividades_view.js";
-        import { CompetenciasView } from "./modulos/processos_trabalho/competencias_view.js";
-
-        window.limpar = () => {
-            delete localStorage.atividadesUsuario;
-            delete localStorage.processosTrabalho;
-            delete localStorage.competencias; 
-            delete localStorage.competenciasUsuario;
-        }
-
-        window.onload = () => {
-
-            window.atividades = document.createElement("atividades-view");
-            window.criarPainel("Atividades", window.atividades);
-            window.atividades.renderizar();
-
-            window.processosTrabalho = document.createElement('processos-trabalho-view');
-            window.criarPainel("Processos de Trabalho", window.processosTrabalho);
-            window.processosTrabalho.addEventListener (ProcessosTrabalhoView.EVENTO_EDITOU_PROCESSO_TRABALHO_USUARIO, evento => {
-                let competencia = evento.detail;
-                console.log ("atualizou competência usuário");
-                window.competencias.renderizar();
-            });
-            window.processosTrabalho.renderizar();
-
-            window.competencias = document.createElement('competencias-view');
-            window.criarPainel("Conteúdo", window.competencias);
-            window.competencias.addEventListener (AtividadesView.EVENTO_CRIAR_ATIVIDADE, evento => {
-                let competencia = evento.detail;
-                console.log ("adicionarAtividade");
-                window.atividades.adicionarAtividadeDepoisDaMaisRecente(competencia);
-            });
-            window.competencias.renderizar();
-            window.atualizarDimensoes();
-        };
-
-        window.onresize = () => {
-            window.atualizarDimensoes();
-        };
-
-        window.atualizarDimensoes = () => {                             
-            //window.atividades.style.height = `200px`;
-            //window.competencias.style.height = `150px`;
-            //window.processosTrabalho.redimensionar(screen.availWidth, screen.availHeight - 500);
-        };
-
-        window.criarPainel = (titulo, conteudo) => {
-
-            jsPanel.create({
-                theme: 'dark',
-                headerLogo: '<i class="fad fa-home-heart ml-2"></i>',
-                headerTitle: `${titulo}`,
-                //headerToolbar: '<span class="text-sm">Just some text in optional header toolbar ...</span>',
-                //footerToolbar: '<span class="flex flex-grow">You can have a footer toolbar too</span>'+
-                //            '<i class="fal fa-clock mr-2"></i><span class="clock">loading ...</span>',
-                panelSize: {
-                    width: () => { return Math.min(800, window.innerWidth*0.9);},
-                    height: () => { return Math.min(500, window.innerHeight*0.6);}
-                },
-                animateIn: 'jsPanelFadeIn',
-                //contentAjax: {
-                //    url: 'http://localhost',
-                //    done: (xhr, panel) => {
-                //        panel.content.innerHTML = xhr.responseText;
-                //        Prism.highlightAll();
-                //    }
-                //},
-                onwindowresize: true,
-                callback: function(panel) {
-                    function clock() {
-                        let time = new Date(),
-                            hours = time.getHours(),
-                            minutes = time.getMinutes(),
-                            seconds = time.getSeconds();
-                        panel.footer.querySelectorAll('.clock')[0].innerHTML = `${harold(hours)}:${harold(minutes)}:${harold(seconds)}`;
-                        function harold(standIn) {
-                            if (standIn < 10) {standIn = '0' + standIn;}
-                            return standIn;
-                        }
-                    }
-                    setInterval(clock, 1000);
-                },
-                content: conteudo
-            });
-        }
+        import './trabalho_rfb.js';
     </script>
 </head>
 <body>    
