--- a/src/web/TrabalhoRFB.html
+++ b/src/web/TrabalhoRFB.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt" manifest="./offline.appcache">
 <head>
     <meta charset="UTF-8">
-    <title>Trabalho RFB</title>
+    <title>Opus RFB</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
     <!-- TODO: colocar tudo em um arquivo só para distribuição -->
@@ -37,7 +37,7 @@
 </head>
 <body>    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Trabalho RFB</a>
+        <a class="navbar-brand" href="#">Opus RFB</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
