--- a/src/web/index.html
+++ b/src/web/index.html
@@ -60,6 +60,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="window.trabalhoRFB.exportarCSV()">Exportar CSV</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://web.microsoftstream.com/video/d037d2b4-1e24-45d2-9353-e1622d80b58a">Ajuda</a>
+                </li>
             </ul>
         </div>
     </nav>      
